<resources>
    <string name="app_name">MoneyTracker</string>
    <string name="caption">Название</string>
    <string name="coast">0</string>
    <string name="currency"> &#8381;</string>
    <string name="add_button_description">Add new record</string>
    <string name="price_regex_string">%1$s %2$s</string>
    <string name="add_activity_title">Новая запись</string>
    <string name="main_activity_title">Учет бюджета</string>
    <string name="tab_expenses">РАСХОДЫ</string>
    <string name="tab_incomes">ДОХОДЫ</string>
    <string name="tab_balance">БАЛАНС</string>
    <string name="under_construction_description">Under Construction</string>
    <string name="error">Error!!!</string>
    <string name="erorr_item_adding_text">Error during item adding!!!</string>
    <string name="item_adding_text">Item added successful!!!</string>
    <string name="delete_icon_title">Delete</string>
    <string name="confirm_remove">Delete selected items?</string>
    <string name="action_title">%1$d selected</string>
    <string name="caption_text">Ваш незаменимый помощник в управлении бюджетом</string>
    <string name="balance_total_caption">ваш баланс</string>
    <string name="menu_item_text">Logout</string>

    <string-array name="tabs_titles">
        <item>@string/tab_expenses</item>
        <item>@string/tab_incomes</item>
        <item>@string/tab_balance</item>
    </string-array>
</resources>
