<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pattern"
    android:elevation="@dimen/shadow"
    tools:context="com.loftschool.moneytracker.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/add_activity_title"
            app:titleTextColor="@color/text_color"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_bar_height"
        android:background="@color/background_color"
        android:elevation="@dimen/shadow"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/linear_layout_padding_bottom"
        android:paddingEnd="@dimen/linear_layout_padding_end"
        android:paddingStart="@dimen/linear_layout_padding_start"
        android:paddingTop="@dimen/linear_layout_padding_top">

        <EditText
            android:id="@+id/caption"
            android:layout_width="@dimen/caption_edit_text_width"
            android:layout_height="@dimen/caption_edit_text_height"
            android:layout_gravity="bottom"
            android:layout_weight="5"
            android:background="@android:color/transparent"
            android:gravity="start"
            android:hint="@string/caption"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/coast"
            android:layout_width="@dimen/coast_edit_text_width"
            android:layout_height="@dimen/coast_edit_text_height"
            android:layout_gravity="bottom"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:gravity="end"
            android:hint="@string/coast"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="@dimen/currency_text_view_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:hint="@string/currency"
            android:textSize="@dimen/currency_text_size" />

        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="@dimen/add_image_button_width"
            android:layout_height="@dimen/add_image_button_height"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:background="@color/background_color"
            android:contentDescription="@string/add_button_description"
            android:src="@drawable/ic_add_black_24dp" />
    </LinearLayout>

</FrameLayout>
